# AR-Touchpad

./: .gitignore  CHANGELOG.md  LICENSE  NOTICE  README.md  gradlew  settings.gradle.kts
.github/workflows/: build-debug-apk.yml  build-mediaprojection-probe-apk.yml
MediaProjectionProbe/: settings.gradle
MediaProjectionProbe/app/: build.gradle
MediaProjectionProbe/app/src/main/: AndroidManifest.xml
MediaProjectionProbe/app/src/main/java/com/tohyas/mediaprojectionprobe/: MainActivity.java
MediaProjectionProbe/app/src/main/res/values/: strings.xml  styles.xml
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/aidl/com/pgratz/artouchpad/: IMouseService.aidl
app/src/main/aidl/com/tohyas/deskpad/: IMouseService.aidl
app/src/main/cpp/: CMakeLists.txt  uinput_jni.cpp
app/src/main/java/com/pgratz/artouchpad/: MainActivity.kt  MouseService.kt  ShizukuMouseController.kt  TouchpadAccessibilityService.kt  TouchpadViewModel.kt  UinputNative.kt
app/src/main/java/com/pgratz/artouchpad/ui/: TouchpadScreen.kt
app/src/main/java/com/tohyas/deskpad/: MainActivity.kt  MouseService.kt  ShizukuMouseController.kt  TouchpadAccessibilityService.kt  TouchpadViewModel.kt  UinputNative.kt
app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml  ic_launcher_monochrome.xml
app/src/main/res/mipmap-anydpi-v26/: ic_launcher_round.xml
app/src/main/res/mipmap-anydpi-v33/: ic_launcher_round.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/xml/: accessibility_service_config.xml
gradle/: libs.versions.toml
(+7 files in other folders)
